--- a/FE/css/waper.css
+++ b/FE/css/waper.css
@@ -3,7 +3,7 @@
  * mr.sheak@gmail.com
  * 20140705
  */
-.waper_box{ max-width: 1200px; min-width: 960px; margin: 20px auto; overflow: hidden;}
+.waper_box{ max-width: 1200px; min-width: 960px; margin: 20px auto;}
 .waper_box h1.warper_tt{ font-size: 30px; color: #333; padding-left: 40px; margin-bottom: 30px; position: relative;}
 
 .warper_tab{ height: 40px; line-height: 40px; border-bottom: 1px solid #d3d3d3; margin-bottom: 20px;}
@@ -19,9 +19,10 @@
 .yj_list .yj_item > dl > dd img{ display: block; width: 570px; height: 370px;}
 
 .yj_list .yj_item > dl > dt{ position: absolute; width: 530px; padding:30px 20px; height: 310px;}
+.yj_list .yj_item > dl > dt > a{ display: block; width: 550px; height: 340px; position: absolute; top:0; left:0; padding:30px 0 0 20px ;}
 .yj_list .yj_item > dl > dt h2{ color: #fff; font-size: 24px; height: 34px; line-height: 34px; overflow: hidden;}
 
-.yj_list .yj_item > dl > dt .yj_author{ position: relative; padding-left: 28px; height: 24px; line-height: 24px; color: #fff; margin-top: 10px;}
+.yj_list .yj_item > dl > dt .yj_author{ position: relative; padding-left: 28px; height: 24px; line-height: 24px; color: #fff; margin-top: 45px;}
 .yj_list .yj_item > dl > dt .yj_author img.u_sm{ width: 24px; height: 24px; position: absolute; left:0; top:0;}
 .yj_list .yj_item > dl > dt .yj_author .author_link > a{ color: #010101; text-decoration: underline; margin-right: 10px;}
 .yj_list .yj_item > dl > dt .yj_author .author_link .author_info{ position: absolute; width: 280px; height: 120px; top:30px; left:0; padding: 10px; background-color:rgba(255,255,255,0.85); *background:#000; *filter:alpha(opacity=85);}
@@ -45,7 +46,7 @@
 .author_yj_last li a:hover{ text-decoration: underline;}
 .author_yj_last .gray{ color: #ccc; border-bottom: 1px solid #ccc; padding-bottom: 5px; margin-bottom: 5px;}
 
-.yj_info{ background: #000; color: #fff; height: 80px; position: absolute; bottom: 0; left:0; padding:20px; line-height: 24px; background-color:rgba(0,0,0,0.55); *background:#000; *filter:alpha(opacity=55);}
+.yj_info{ background: #000; color: #fff; width: 100%; height: 80px; position: absolute; bottom: 0; left:0; padding:20px; line-height: 24px; background-color:rgba(0,0,0,0.55); *background:#000; *filter:alpha(opacity=55);}
 .yj_info *{position: relative; color: #000;}
 
 
@@ -78,6 +79,10 @@
 /*搜索*/
 .search_icon{ background-position: -832px -232px;}
 .no_result{ font-size: 24px; color: #6e6e6e; text-align: center; padding:130px 0;}
+
+#back_to_login{ text-align: center;}
+#back_to_login h2{ font-size: 24px; margin-bottom: 10px;}
+#back_to_login p{ font-size: 14px;}
 
 /*撰写*/
 .create_icon{ background-position: -832px -98px;}
