upload js & css

--- a/FE/css/detail.css
+++ b/FE/css/detail.css
@@ -39,7 +39,7 @@
 .author_img{ margin-right: 10px;}
 .author_img img{ display: block; width: 140px; height: 140px; padding: 3px; border: 1px solid #f0f0f0;}
 .authot_info{ position: absolute; top:5px; left:160px;}
-.authot_info h2{font-size: 20px; color: #333;}
+.authot_info h2{font-size: 20px; color: #333; display: inline-block;}
 .authot_info p{ margin: 10px 0;}
 .authot_info .btn_s{ margin-left: 10px;}
 
