--- a/lry_webapp/src/main/webapp/resources/css/waper.css
+++ b/lry_webapp/src/main/webapp/resources/css/waper.css
@@ -3,10 +3,10 @@
  * mr.sheak@gmail.com
  * 20140705
  */
-.waper_box{ max-width: 1200px; min-width: 960px; margin: 20px auto; overflow: hidden;}
+.waper_box{ max-width: 1200px; min-width: 960px; margin: 20px auto;}
 .waper_box h1.warper_tt{ font-size: 30px; color: #333; padding-left: 40px; margin-bottom: 30px; position: relative;}
 
-.warper_tab{ height: 40px; line-height: 40px; border-bottom: 1px solid #d3d3d3; margin-bottom: 20px;}
+.warper_tab{ height: 40px; line-height: 40px; border-bottom: 1px solid #d3d3d3; margin: 20px 0;}
 .warper_tab li{height: 39px; line-height: 39px; float: left; font-size: 14px; color: #333; padding: 0 30px; border-radius: 3px;}
 .warper_tab li.cur{border: 1px solid #d3d3d3; border-bottom: 3px solid #f6f6f6;}
 .warper_tab li a{ color: #305d8a; padding: 8px 10px;}
@@ -19,9 +19,10 @@
 .yj_list .yj_item > dl > dd img{ display: block; width: 570px; height: 370px;}
 
 .yj_list .yj_item > dl > dt{ position: absolute; width: 530px; padding:30px 20px; height: 310px;}
+.yj_list .yj_item > dl > dt > a{ display: block; width: 550px; height: 340px; position: absolute; top:0; left:0; padding:30px 0 0 20px ;}
 .yj_list .yj_item > dl > dt h2{ color: #fff; font-size: 24px; height: 34px; line-height: 34px; overflow: hidden;}
 
-.yj_list .yj_item > dl > dt .yj_author{ position: relative; padding-left: 28px; height: 24px; line-height: 24px; color: #fff; margin-top: 10px;}
+.yj_list .yj_item > dl > dt .yj_author{ position: relative; padding-left: 28px; height: 24px; line-height: 24px; color: #fff; margin-top: 45px;}
 .yj_list .yj_item > dl > dt .yj_author img.u_sm{ width: 24px; height: 24px; position: absolute; left:0; top:0;}
 .yj_list .yj_item > dl > dt .yj_author .author_link > a{ color: #010101; text-decoration: underline; margin-right: 10px;}
 .yj_list .yj_item > dl > dt .yj_author .author_link .author_info{ position: absolute; width: 280px; height: 120px; top:30px; left:0; padding: 10px; background-color:rgba(255,255,255,0.85); *background:#000; *filter:alpha(opacity=85);}
@@ -45,7 +46,7 @@
 .author_yj_last li a:hover{ text-decoration: underline;}
 .author_yj_last .gray{ color: #ccc; border-bottom: 1px solid #ccc; padding-bottom: 5px; margin-bottom: 5px;}
 
-.yj_info{ background: #000; color: #fff; height: 80px; position: absolute; bottom: 0; left:0; padding:20px; line-height: 24px; background-color:rgba(0,0,0,0.55); *background:#000; *filter:alpha(opacity=55);}
+.yj_info{ background: #000; color: #fff; width: 100%; height: 80px; position: absolute; bottom: 0; left:0; padding:20px; line-height: 24px; background-color:rgba(0,0,0,0.55); *background:#000; *filter:alpha(opacity=55);}
 .yj_info *{position: relative; color: #000;}
 
 
@@ -79,6 +80,10 @@
 .search_icon{ background-position: -832px -232px;}
 .no_result{ font-size: 24px; color: #6e6e6e; text-align: center; padding:130px 0;}
 
+#back_to_login{ text-align: center;}
+#back_to_login h2{ font-size: 24px; margin-bottom: 10px;}
+#back_to_login p{ font-size: 14px;}
+
 /*撰写*/
 .create_icon{ background-position: -832px -98px;}
 .add_photo_form_box{}
@@ -99,7 +104,7 @@
 .u_yj_author img{ display: block; width: 26px; height: 26px; position: absolute; top:0 ; left:0;}
 .u_yj_author a{ margin-left: 35px; color: #305d8a; font-size: 14px; text-decoration: underline;}
 
-.u_yj_info{ height: 40px; line-height: 40px; position: absolute; left:320px; bottom:10px;}
+.u_yj_info{ height: 40px; line-height: 40px; position: absolute; left:320px; bottom:10px; width: 100%;}
 .u_yj_info a{ position: relative; padding-left: 20px; margin-right: 10px;}
 
 /*粉丝管理*/
@@ -135,7 +140,7 @@
 .u_msg_details{ font-size: 14px; color: #333; line-height: 22px; margin-top: 10px; width: 80%;}
 
 /*个人主页*/
-#my_box{ position: relative; padding: 10px 0 0 180px; margin-bottom: 20px;}
+#my_box{ position: relative; padding: 10px 0 0 180px; margin-bottom: 20px; min-height: 150px;}
 #my_box .author_img{ position: absolute; left:0; top:0; padding: 3px; border: 1px solid #ccc; background: #fff;}
 #my_box .author_img img{ display: block; width: 140px; height: 140px;}
 #my_box .authot_info h2.vip_b_ico{ display: inline-block; height: 40px; background-position: right -855px;}
