--- a/FE/css/waper.css
+++ b/FE/css/waper.css
@@ -46,13 +46,13 @@
 .author_yj_last li a:hover{ text-decoration: underline;}
 .author_yj_last .gray{ color: #ccc; border-bottom: 1px solid #ccc; padding-bottom: 5px; margin-bottom: 5px;}
 
-.yj_info{ background: #000; color: #fff; width: 100%; height: 80px; position: absolute; bottom: 0; left:0; padding:20px; line-height: 24px; background-color:rgba(0,0,0,0.55); *background:#000; *filter:alpha(opacity=55);}
+.yj_info{ background: #000; color: #fff; width: 530px; height: 80px; position: absolute; bottom: 0; left:0; padding:20px; line-height: 24px; background-color:rgba(0,0,0,0.55); *background:#000; *filter:alpha(opacity=55);}
 .yj_info *{position: relative; color: #000;}
 
 
 /*找规划师*/
 .planner_search{ position: absolute; top:4px; left:190px;}
-.search_btn{background-color: #efefef; text-align: center; color: #000 !important; display: block; width: 66px; height: 34px; line-height: 34px; position: absolute; top:0px; left:221px; border: 1px solid #ddd;}
+.search_btn{background-color: #efefef; text-align: center; color: #000 !important; display: block; width: 66px; height: 36px; line-height: 36px; position: absolute; top:0px; left:221px; border: 1px solid #ddd;}
 .planner_list{width: 1240px;}
 .planner_item{float: left; margin:0 20px 20px 0; background: #fff; padding:10px; box-shadow: 0 0 7px #c7c7c7; height: 235px;  width: 570px; }
 .planner_item > dl{ position: relative;}
@@ -72,7 +72,7 @@
 .planner_item .planner_yj_list .planner_yj_detail{ padding: 0 5px;}
 .planner_item .planner_yj_list .planner_yj_detail img{ width: 184px; height: 110px; display: block;}
 .planner_item .planner_yj_list .planner_yj_detail .right li{ position: relative; width: 360px; height: 28px; line-height: 28px;}
-.planner_item .planner_yj_list .planner_yj_detail .right li a{ color: #305d8a; position: absolute; left:0; top:0;}
+.planner_item .planner_yj_list .planner_yj_detail .right li a{ color: #305d8a; position: absolute; left:0; top:0; display: block; width: 285px; height: 30px; overflow: hidden;}
 .planner_item .planner_yj_list .planner_yj_detail .right li a:hover{ text-decoration: underline;}
 .planner_item .planner_yj_list .planner_yj_detail .right li span{ position: absolute; right:0; top:0; color: #9b9b9b;}
 
