--- a/lry_webapp/src/main/webapp/resources/css/main.css
+++ b/lry_webapp/src/main/webapp/resources/css/main.css
@@ -4,7 +4,7 @@
  */
 .box{ max-width: 1200px; min-width: 800px; margin: 0 auto; display: block;}
 /*main_sp*/
-#city , #search_btn , .user_more , .tag_ico , .tag_ico_r , .share_box h3 , .share_box ul li a , #min_share li a , .suc_ico , .label li i.close , .ico , .vip_ico , .vip_b_ico , .add_btn , .added_btn , .msg_btn , .plan_area li a , .yj_icon , .search_icon , .create_icon , .add_yj_photo , .uploadify-button , .add_fav i , .added_fav i , .J_moveUp , .J_moveDown , .J_delete , #create_success h2 , .like_ico , .share_ico , .liked_ico , .weibo_ico , .qq_t_ico , .rr_ico , .icon_edit , .icon_del , .fav_icon , .fans_icon , .add_icon , .msg_icon , .delete_ico , .edit_icon , .icon_fav{ background-image: url(../imgs/main_sp.png); background-repeat: no-repeat;}
+#city , #search_btn , .user_more , .tag_ico , .tag_ico_r , .share_box h3 , .share_box ul li a , #min_share li a , .suc_ico , .label li i.close , .ico , .vip_ico , .vip_b_ico , .add_btn , .added_btn , .msg_btn , .yj_icon , .search_icon , .create_icon , .add_yj_photo , .uploadify-button , .add_fav i , .added_fav i , .J_moveUp , .J_moveDown , .J_delete , #create_success h2 , .like_ico , .share_ico , .liked_ico , .weibo_ico , .qq_t_ico , .rr_ico , .icon_edit , .icon_del , .fav_icon , .fans_icon , .add_icon , .msg_icon , .delete_ico , .edit_icon , .icon_fav{ background-image: url(../imgs/main_sp.png); background-repeat: no-repeat;}
 
 .blue , .blue a{ color: #364758;}
 .g9{ color: #999 !important;}
@@ -77,11 +77,11 @@
 
 
 /*可策划地区*/
-.plan_area{ margin: 10px 0; position: relative; padding-left: 80px; height: 22px;}
+.plan_area{ margin: 10px 0; position: relative; padding-left: 80px; height: 22px; overflow: hidden;}
 .plan_area dt{ position: absolute; top:0; left:0;}
 .plan_area dd{}
 .plan_area li{ float: left; margin-bottom: 5px;}
-.plan_area li a{ padding:0 15px 0 5px; display: block; height: 20px; line-height: 20px; background-position: right -517px; color: #364758 !important; margin-right: 5px; }
+.plan_area li a{ padding:0 15px 0 5px; display: block; height: 20px; line-height: 20px; /*background-position: right -517px;*/ color: #364758 !important; margin-right: 5px; }
 
 
 /*按钮*/
@@ -196,6 +196,7 @@
 #user{height: 102px;}
 #user > ul{ margin: 40px 20px 0 0;}
 #user > ul > li{ float: left; color: #fff; margin-right: 8px;}
+#user > ul > li.vip_ico{ padding-right: 22px;}
 #user > ul > li > a{ color: #fff;}
 #user > ul > li > a:hover{ text-decoration: underline;}
 .bd_right{ border-right: 1px solid #fff; padding-right: 8px; height: 16px;}
@@ -319,6 +320,7 @@
 
 #tips{ height: 100px;}
 
+.waper_box{ width: 100%;}
 }
 
 @media screen and (min-width: 640px) and (max-width: 800px) {
@@ -378,7 +380,7 @@
 .album_block{margin-bottom: 15px;}
 .album_block .a_title .right .g9:hover{text-decoration: none;color:#999;cursor: default}
 .a_title{border:1px solid #DCDCDC;background: #fafafa;padding:15px ;clear:both;overflow: hidden;zoom:1;}
-.a_title .left{width:300px;float: left; }
+.a_title .left{width:285px;float: left;height: 185px; overflow: hidden;}
 .a_title .right{width:730px;float: right; position: relative;}
 .a_title .right textarea{ width: 98%;  height: 165px; padding: 10px;}
 
@@ -412,6 +414,11 @@
 #create_success .suc_link{ margin-left: 145px;}
 
 
+/*登陆弹层*/
+#back_to_login{ text-align: center;}
+#back_to_login h2{ font-size: 24px; margin-bottom: 10px;}
+#back_to_login p{ font-size: 14px;}
+
 
 /*发私信*/
 .msgForm{ border:1px solid #ccc; width: 330px; height: 140px; position: absolute; top:35px; right: 0; background: #eee; border-radius: 3px; padding: 10px; text-align: left; z-index: 50;}
@@ -421,7 +428,7 @@
 .msgForm .sendMsgBtn ,.msgForm .closeMsgBtn{ background: #364758; padding:5px 20px; color: #fff !important; cursor: pointer; font-size: 14px; margin:5px !important;}
 .msgForm .closeMsgBtn{ background: #ccc; color: #333 !important;}
 .msgForm .msgBot{ margin-top: 5px;}
-.msgForm #msgNotice{ font-size: 14px; font-weight: bold;}
+.msgForm .msgNotice{ font-size: 14px; font-weight: bold; display: none; width: 80px;}
 .msgForm .arrow_up {
   width:0px; 
   height:0px; 
