--- a/lry_webapp/src/main/webapp/resources/css/regist.css
+++ b/lry_webapp/src/main/webapp/resources/css/regist.css
@@ -37,7 +37,7 @@
 .form_mail_box h1{ font-size: 24px; color: #333; margin-bottom: 10px;}
 .form_mail_box h2{ font-size: 14px; color: #333; font-weight: bold; margin-bottom: 10px;}
 .form_mail_box h3{ font-size: 14px; color: #666; height: 30px; line-height: 30px; margin-bottom: 30px;}
-.form_mail_box .btn{ margin-right: 20px;}
+.form_mail_box .btn{ margin-right: 20px; display: inline-block;}
 .form_mail_box ol li{ list-style: decimal; line-height: 26px; margin-left: 20px;}
 
 .form_mail_msg{ width: 100%; border:1px solid #ccc; padding:25px; margin-top: 30px;}
@@ -45,4 +45,7 @@
 /*form_success_box*/
 .form_success_box{}
 .form_success_box h1{ margin:0 0 15px -40px;}
+
+.be_planner_form{ margin-bottom: 20px;}
+.be_planner_form tr{ margin-bottom: 10px; height: 60px;}
 
