--- a/lry_webapp/src/main/webapp/resources/css/waper.css
+++ b/lry_webapp/src/main/webapp/resources/css/waper.css
@@ -3,7 +3,7 @@
  * mr.sheak@gmail.com
  * 20140705
  */
-.waper_box{ max-width: 1200px; min-width: 960px; margin: 20px auto;}
+.waper_box{ max-width: 1200px; margin: 20px auto;}
 .waper_box h1.warper_tt{ font-size: 30px; color: #333; padding-left: 40px; margin-bottom: 30px; position: relative;}
 
 .warper_tab{ height: 40px; line-height: 40px; border-bottom: 1px solid #d3d3d3; margin: 20px 0;}
@@ -12,7 +12,7 @@
 .warper_tab li a{ color: #305d8a; padding: 8px 10px;}
 
 /*找游记*/
-.yj_list{ width: 1240px;}
+.yj_list{ width: 1240px; margin: 0 auto; position: relative;}
 .yj_list .yj_item{ float: left; width: 570px; margin:0 20px 20px 0; background: #fff; padding:10px; box-shadow: 0 0 7px #c7c7c7;}
 .yj_list .yj_item > dl{ position: relative; width: 570px; height: 370px; overflow: hidden;}
 .yj_list .yj_item > dl > dd{}
@@ -46,13 +46,13 @@
 .author_yj_last li a:hover{ text-decoration: underline;}
 .author_yj_last .gray{ color: #ccc; border-bottom: 1px solid #ccc; padding-bottom: 5px; margin-bottom: 5px;}
 
-.yj_info{ background: #000; color: #fff; width: 100%; height: 80px; position: absolute; bottom: 0; left:0; padding:20px; line-height: 24px; background-color:rgba(0,0,0,0.55); *background:#000; *filter:alpha(opacity=55);}
+.yj_info{ background: #000; color: #fff; width: 530px; height: 80px; position: absolute; bottom: 0; left:0; padding:20px; line-height: 24px; background-color:rgba(0,0,0,0.55); *background:#000; *filter:alpha(opacity=55);}
 .yj_info *{position: relative; color: #000;}
 
 
 /*找规划师*/
 .planner_search{ position: absolute; top:4px; left:190px;}
-.search_btn{background-color: #efefef; text-align: center; color: #000 !important; display: block; width: 66px; height: 34px; line-height: 34px; position: absolute; top:0px; left:221px; border: 1px solid #ddd;}
+.search_btn{background-color: #efefef; text-align: center; color: #000 !important; display: block; width: 66px; height: 36px; line-height: 36px; position: absolute; top:0px; left:221px; border: 1px solid #ddd;}
 .planner_list{width: 1240px;}
 .planner_item{float: left; margin:0 20px 20px 0; background: #fff; padding:10px; box-shadow: 0 0 7px #c7c7c7; height: 235px;  width: 570px; }
 .planner_item > dl{ position: relative;}
@@ -60,9 +60,10 @@
 .planner_item > dl > dd{}
 .planner_item > dl > dd.planner_name{ float: left; margin: 15px 0 0 20px;}
 .planner_item > dl > dd.planner_info{ float: right; padding:13px 140px 10px 0;}
+.planner_item > dl > dd.planner_info .msgForm{ top:45px;}
 .planner_item > dl > dd.planner_info span{ margin-right: 10px;}
 .planner_item > dl > dd.planner_info a.btn_s{ position: absolute;}
-.planner_item > dl > dd.planner_info .add_btn{ top:10px; right:60px;}
+.planner_item > dl > dd.planner_info .add_btn , .planner_item > dl > dd.planner_info .added_btn{ top:10px; right:60px;}
 .planner_item > dl > dd.planner_info .msg_btn{ top:10px; right:0px;}
 
 .planner_item .planner_yj_list{ margin-top: 10px;}
@@ -71,7 +72,7 @@
 .planner_item .planner_yj_list .planner_yj_detail{ padding: 0 5px;}
 .planner_item .planner_yj_list .planner_yj_detail img{ width: 184px; height: 110px; display: block;}
 .planner_item .planner_yj_list .planner_yj_detail .right li{ position: relative; width: 360px; height: 28px; line-height: 28px;}
-.planner_item .planner_yj_list .planner_yj_detail .right li a{ color: #305d8a; position: absolute; left:0; top:0;}
+.planner_item .planner_yj_list .planner_yj_detail .right li a{ color: #305d8a; position: absolute; left:0; top:0; display: block; width: 285px; height: 30px; overflow: hidden;}
 .planner_item .planner_yj_list .planner_yj_detail .right li a:hover{ text-decoration: underline;}
 .planner_item .planner_yj_list .planner_yj_detail .right li span{ position: absolute; right:0; top:0; color: #9b9b9b;}
 
@@ -80,9 +81,6 @@
 .search_icon{ background-position: -832px -232px;}
 .no_result{ font-size: 24px; color: #6e6e6e; text-align: center; padding:130px 0;}
 
-#back_to_login{ text-align: center;}
-#back_to_login h2{ font-size: 24px; margin-bottom: 10px;}
-#back_to_login p{ font-size: 14px;}
 
 /*撰写*/
 .create_icon{ background-position: -832px -98px;}
@@ -173,5 +171,67 @@
 
 .u_info_form_box .uploadify-button{ background: url(../imgs/user/u_face_input.png) left top no-repeat; width: 391px !important;}
 
+
+/*float css*/
+/**
+     * Grid items
+     */
+    #tiles li {
+      -moz-box-sizing: border-box;
+           box-sizing: border-box;
+      -webkit-transition: all 0.3s ease-out;
+         -moz-transition: all 0.3s ease-out;
+           -o-transition: all 0.3s ease-out;
+              transition: all 0.3s ease-out;
+    }
+
+    #tiles li img.float_img {
+      width: 100%;
+      height: auto;
+    }
+
+    /**
+     * Sort buttons
+     */
+    #sortbys {
+      list-style-type: none;
+      text-align: center;
+      margin: 0 0 0 10px;
+      height: 28px;
+    }
+
+    #sortbys li {
+      font-size: 12px;
+      float: left;
+      padding: 6px 0 4px 0;
+      cursor: pointer;
+      margin: 0 1% 0 1%;
+      width: 7em;
+      -webkit-transition: all 0.15s ease-out;
+         -moz-transition: all 0.15s ease-out;
+           -o-transition: all 0.15s ease-out;
+              transition: all 0.15s ease-out;
+      -webkit-border-radius: 3px;
+         -moz-border-radius: 3px;
+              border-radius: 3px;
+    }
+
+    #sortbys li:hover {
+      background: #dedede;
+    }
+
+    #sortbys li.active {
+      background: #333333;
+      color: #ffffff;
+    }
+
+#float_yj{}
+#float_yj li a{ position: relative; display: block;}
+#float_yj .float_img_tt{ position: absolute; bottom:0px; left:0px; text-align: center; width: 100%; font-size: 24px; color: #fff; background: url(../imgs/black.png);}
+#float_yj .float_img_tt span{ padding:15px 10px; display: block;}
+#float_yj .float_img_info{ margin: 15px 0; line-height: 22px;}
+#float_yj .float_img_author{ border-top: 1px solid #ccc; position: relative; padding: 10px 0 0 30px;}
+#float_yj .float_img_author img.u_sm{ position: absolute; top:7px; left:0;}
+#float_yj .float_img_author span{ display: inline-block; margin-right: 10px;}
 
 
