--- a/lry_webapp/src/main/webapp/resources/css/init.css
+++ b/lry_webapp/src/main/webapp/resources/css/init.css
@@ -56,7 +56,7 @@ abbr, acronym {
 body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, input, textarea, p, blockquote, th, td, address, caption, cite, code, dfn, em, strong, th, var {
     font: 400 12px "微软雅黑", "Microsoft YaHei", "Tahoma", "宋体";
 }
-body{background-color:#f6f6f6;}
+body{background-color:#FEFEFE;}
 html{overflow-y:scroll; overflow-x:hidden;}
 
 /*
