--- a/lry_webapp/src/main/webapp/resources/css/main.css
+++ b/lry_webapp/src/main/webapp/resources/css/main.css
@@ -181,7 +181,19 @@
 .tag_ico{left:22px;}
 .tag_ico_r{right:22px;}
 
-.error_box{ background: #78d8fb; height: 500px;}
+/*error*/
+.main_outer{background: url(/imgs/err/1362920104872409008969.png) no-repeat center 334px #fefefe;width:1050px;margin:50px auto;}
+.main{background:url(/imgs/err/404.png) no-repeat 30px 40px;}
+.main_inner{background:url(/imgs/err/shadow.gif) no-repeat center 387px;padding-bottom: 50px;}
+.tips{height:348px;background:url(/imgs/err/cup.png) no-repeat 758px bottom;padding:15px 25px;font-family:microsoft yahei;padding-top:50px;}
+.tips h1{margin-left:540px;margin-bottom:15px; font-size: 34px;}
+.tips a{text-decoration:none;color:#333;}
+.tips p{margin-left:540px;margin-bottom:10px;font-size:18px;}
+.tips ul{width:127px;margin:0 auto 0 562px;text-align:left;}
+.tips ul li{ font-size: 14px; line-height: 30px; list-style:  square;}
+.tips ul li a{ color: #364758;}
+.tips ul li a:hover{ text-decoration: underline;}
+
 
 #search_input{ width: 175px; height: 32px; line-height: 32px; background:#fff; border: 1px solid #19242e; border-radius: 3px; padding: 0 30px 0 5px; position: absolute; top:35px; left:70px; }
 #search_btn{ display: block; width: 24px; height: 24px;  background-position: 0 -25px; position: absolute; top:38px; left:250px; border:0; background-color: #fff; cursor: pointer;}
