--- a/lry_webapp/src/main/webapp/resources/css/main.css
+++ b/lry_webapp/src/main/webapp/resources/css/main.css
@@ -182,10 +182,10 @@
 .tag_ico_r{right:22px;}
 
 /*error*/
-.main_outer{background: url(/imgs/err/1362920104872409008969.png) no-repeat center 334px #fefefe;width:1050px;margin:50px auto;}
-.main{background:url(/imgs/err/404.png) no-repeat 30px 40px;}
-.main_inner{background:url(/imgs/err/shadow.gif) no-repeat center 387px;padding-bottom: 50px;}
-.tips{height:348px;background:url(/imgs/err/cup.png) no-repeat 758px bottom;padding:15px 25px;font-family:microsoft yahei;padding-top:50px;}
+.main_outer{background: url(../imgs/err/1362920104872409008969.png) no-repeat center 334px #fefefe;width:1050px;margin:50px auto;}
+.main{background:url(../imgs/err/404.png) no-repeat 30px 40px;}
+.main_inner{background:url(../imgs/err/shadow.gif) no-repeat center 387px;padding-bottom: 50px;}
+.tips{height:348px;background:url(../imgs/err/cup.png) no-repeat 758px bottom;padding:15px 25px;font-family:microsoft yahei;padding-top:50px;}
 .tips h1{margin-left:540px;margin-bottom:15px; font-size: 34px;}
 .tips a{text-decoration:none;color:#333;}
 .tips p{margin-left:540px;margin-bottom:10px;font-size:18px;}
