--- a/FE/css/waper.css
+++ b/FE/css/waper.css
@@ -54,16 +54,16 @@
 .planner_search{ position: absolute; top:4px; left:190px;}
 .search_btn{background-color: #efefef; text-align: center; color: #000 !important; display: block; width: 66px; height: 36px; line-height: 36px; position: absolute; top:0px; left:221px; border: 1px solid #ddd;}
 .planner_list{width: 1240px;}
-.planner_item{float: left; margin:0 20px 20px 0; background: #fff; padding:10px; box-shadow: 0 0 7px #c7c7c7; height: 235px;  width: 570px; }
+.planner_item{float: left; margin:0 20px 20px 0; background: #fff; padding:10px; box-shadow: 0 0 7px #c7c7c7; height: 255px;  width: 570px; }
 .planner_item > dl{ position: relative;}
 .planner_item > dl > dt{ float: left;}
 .planner_item > dl > dd{}
 .planner_item > dl > dd.planner_name{ float: left; margin: 15px 0 0 20px;}
-.planner_item > dl > dd.planner_info{ float: right; padding:13px 140px 10px 0;}
+.planner_item > dl > dd.planner_info{ float: right; padding:13px 180px 10px 0;}
 .planner_item > dl > dd.planner_info .msgForm{ top:45px;}
 .planner_item > dl > dd.planner_info span{ margin-right: 10px;}
 .planner_item > dl > dd.planner_info a.btn_s{ position: absolute;}
-.planner_item > dl > dd.planner_info .add_btn , .planner_item > dl > dd.planner_info .added_btn{ top:10px; right:60px;}
+.planner_item > dl > dd.planner_info .add_btn , .planner_item > dl > dd.planner_info .added_btn{ top:10px; right:84px;}
 .planner_item > dl > dd.planner_info .msg_btn{ top:10px; right:0px;}
 
 .planner_item .planner_yj_list{ margin-top: 10px;}
@@ -94,7 +94,11 @@
 /*个人中心*/
 #u_yj_list{ margin-top: 25px;}
 #u_yj_list > li{ padding:10px; background: #eee; position: relative; padding-left: 320px;  height: 190px; margin-bottom: 20px;}
-.u_yj_imgDetail{ display: block; width: 285px; height: 190px; position: absolute; left:10px; top:10px;}
+
+.u_yj_imgBox{ position: absolute; left:10px; top:10px; width: 285px; text-align: center; background: #333;}
+.u_yj_imgBox span{ display:table-cell; vertical-align:middle;  width: 285px;  height: 190px; font-size: 0; line-height: 0; } 
+.u_yj_imgDetail{ display: block; max-height: 190px; max-width: 285px; margin: 0 auto; }
+
 .u_yj_txtDetail{ padding-top: 10px;}
 .u_yj_txtDetail h2 a{ font-size: 16px; display: inline-block; color: #364758; font-weight: bold; height: 36px; line-height: 36px;}
 .u_yj_txtDetail p{ font-size: 12px; color: #333; line-height: 20px;}
