--- a/FE/css/main.css
+++ b/FE/css/main.css
@@ -65,7 +65,7 @@
 
 .add_btn , .added_btn{ display: block; width: 55px; height: 22px; line-height: 22px; color: #fff;  background-position: -4px -404px;}
 .added_btn{  background-position: -74px -404px;}
-.msg_btn{ display: block; width: 55px; height: 22px; line-height: 22px; color: #fff;  background-position: -4px -437px;}
+.msg_btn{ display: block; width: 80px; height: 22px; line-height: 22px; color: #fff;  background-position: -4px -437px;}
 
 .like_ico{ color: #666 !important; background-position: 0px -476px;}
 .liked_ico{ background-position: 0px -544px;}
@@ -77,8 +77,8 @@
 
 
 /*可策划地区*/
-.plan_area{ margin: 10px 0; position: relative; padding-left: 80px; height: 22px; overflow: hidden;}
-.plan_area dt{ position: absolute; top:0; left:0;}
+.plan_area{ margin: 10px 0; position: relative; padding-left: 80px; height: 40px; overflow: hidden; min-height: 40px;}
+.plan_area dt{ position: absolute; top:0; left:0; width: 75px; text-align: right;}
 .plan_area dd{}
 .plan_area li{ float: left; margin-bottom: 5px;}
 .plan_area li a{ padding:0 15px 0 5px; display: block; height: 20px; line-height: 20px; /*background-position: right -517px;*/ color: #364758 !important; margin-right: 5px; }
@@ -392,7 +392,12 @@
 .album_block{margin-bottom: 15px;}
 .album_block .a_title .right .g9:hover{text-decoration: none;color:#999;cursor: default}
 .a_title{border:1px solid #DCDCDC;background: #fafafa;padding:15px ;clear:both;overflow: hidden;zoom:1;}
-.a_title .left{width:285px;float: left;height: 185px; overflow: hidden;}
+/*.a_title .left{width:285px;float: left;height: 185px; overflow: hidden;}*/
+
+.a_title .img_left{width:285px;float: left;height: 185px; overflow: hidden; text-align: center; background: #333;}
+.a_title .img_left span{ display:table-cell; vertical-align:middle;  width: 285px;  height: 185px; font-size: 0; line-height: 0; } 
+.a_title .img_left span img{ display: block; max-height: 185px; max-width: 285px; margin: 0 auto; }
+
 .a_title .right{width:730px;float: right; position: relative;}
 .a_title .right textarea{ width: 98%;  height: 165px; padding: 10px;}
 
