--- a/FE/css/main.css
+++ b/FE/css/main.css
@@ -285,7 +285,7 @@
 
 
 /*min_footer*/
-#min_share{ width: 265px; margin:0 auto;}
+#min_share{ width: 200px; margin:0 auto;}
 #min_share li{ margin-right: 20px; float: left;}
 #min_share li a{ display: block; width: 46px; height: 46px;  text-indent: -3000px;}
 #min_share li.wx a , #min_share li.wx a:hover{ background-position: -473px -371px;}
@@ -296,7 +296,7 @@
 #min_share li.wx{ position: relative;}
 #min_share li.wx #erweima{top: -159px; left:-128px;}
 
-
+#min_share li.email a , #min_share li.email a:hover{ background-position: -416px -371px;}
 
 @media screen and (max-width: 800px) {
 #foot_share{ background-size: 100%; height: 100px;}
